Splitted the solution into two projects.
Project 1 (Morgan.Core)
-------------------------
A .NET Standard project that contains the base of the complete PROJECT (as a whole, including both mobile and desktop apps), such as DataModels, services, VMs etc. This project is aimed to be cross-platform in order to be usable with Xamarin-Forms.

Project 2 (Morgan)
--------------------
Contains everything related to the WPF Windows application. Required services are registered in the App.xaml.cs file by overridding the Startup method.

--- a/Morgan/App.xaml
+++ b/Morgan/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Morgan.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Morgan"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Morgan">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
