--- a/Morgan/Controls/SideMenuControl.xaml
+++ b/Morgan/Controls/SideMenuControl.xaml
@@ -4,11 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Morgan"
+             xmlns:core="clr-namespace:Morgan.Core;assembly=Morgan.Core"
              mc:Ignorable="d" 
              d:DesignHeight="300"
              Width="60"
              local:SideMenuAttachedProperty.AnimateInFromLeft="True"
-             d:DataContext="{x:Static local:SideMenuControlDesignModel.Instance}">
+             d:DataContext="{x:Static core:SideMenuControlDesignModel.Instance}">
 
     <!-- Side Menu Control -->
     <Grid>
