Overall font is changed
Replaced the Windows default font into Nunito typeface. Additionally introduced the Megrim font for special headings.

--- a/Morgan/Controls/ButtonPanelControl.xaml
+++ b/Morgan/Controls/ButtonPanelControl.xaml
@@ -16,6 +16,14 @@
                         Margin="0 0 0 0"
                         CornerRadius="3"/>
 
+                <Border Background="{StaticResource ColorPrimaryBrush}"
+                        HorizontalAlignment="Left"
+                        Width="10"/>
+
+                <Border Background="{StaticResource ColorPrimaryBrush}"
+                        VerticalAlignment="Top"
+                        Height="10"/>
+
                 <ContentPresenter Margin="20"/>
 
             </Grid>
