--- a/Morgan/Pages/Settings/SettingsPage.xaml
+++ b/Morgan/Pages/Settings/SettingsPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="600" d:DesignWidth="500"
       Title="SettingsPage">
 
-    <Grid>
+    <Grid TextBlock.FontFamily="{StaticResource NunitoLight}">
 
         <StackPanel HorizontalAlignment="Center"
                     VerticalAlignment="Center">
@@ -21,12 +21,12 @@
 
             <TextBlock Text="Ooops!"
                    HorizontalAlignment="Center"
-                   FontSize="30" FontWeight="Light"
+                   FontSize="25"
                    Foreground="{StaticResource ForegroundLightBrush}"/>
 
-            <TextBlock Text="Sorry! Settings isn't implemented yet."
+            <TextBlock Text="Sorry! This function isn't implemented yet."
                        Foreground="{StaticResource ForegroundDarkBrush}"
-                       FontSize="15" Margin="0 5 0 0"/>
+                       FontSize="14" Margin="0 5 0 0"/>
 
         </StackPanel>
 
