--- a/Morgan/Controls/SettingsFormControl.xaml
+++ b/Morgan/Controls/SettingsFormControl.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="450">
 
-    <Grid Background="{StaticResource BackgroundSemiDarkBrush}">
+    <Grid Background="{StaticResource BackgroundSemiDarkBrush}"
+          TextBlock.FontFamily="{StaticResource NunitoLight}">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -26,9 +27,8 @@
             <!-- Head text -->
             <TextBlock HorizontalAlignment="Center"
                        VerticalAlignment="Center"
-                       FontFamily="{StaticResource Ionicons}"
                        Foreground="{StaticResource ForegroundLightBrush}"
-                       FontSize="25">
+                       FontSize="20">
                 
                 <Run Text="Settings"/>
 
@@ -38,21 +38,29 @@
 
         <StackPanel Margin="20" Grid.Row="1">
 
-            <TextBlock Text="Provide new values only if you want to override the default settings"
-                       TextWrapping="Wrap" Margin="0 0 0 20" Opacity=".5"
-                       Foreground="{StaticResource ForegroundLightBrush}" FontSize="16"/>
-
-            <TextBlock Text="Location" Foreground="{StaticResource ForegroundLightBrush}" FontSize="22"/>
+            <TextBlock TextWrapping="Wrap" Margin="0 0 0 20" Opacity=".5"
+                       Foreground="{StaticResource ForegroundLightBrush}" FontSize="14">
+                You can change the default settings by entering new values and click te save button.
+            </TextBlock>
+            
+            <TextBlock Text="LOCATION" Foreground="{StaticResource ForegroundLightBrush}" FontSize="16" FontFamily="Nunito"/>
             <TextBox Tag="Location to store the music files" Margin="0 10 0 15"
                      local:TextBoxAttachedProperties.FocusControlOnLoad="True"
-                     Text="{Binding DisplaySaveFilePath}"/>
+                     Text="{Binding DisplaySaveFilePath}" FontSize="14"/>
 
-            <TextBlock Text="Hierachy" Foreground="{StaticResource ForegroundLightBrush}" FontSize="22" Margin="0 15 0 10"/>
+            <TextBlock Text="HIERACHY" Foreground="{StaticResource ForegroundLightBrush}" FontSize="16" Margin="0 15 0 10" FontFamily="Nunito"/>
             <TextBox Tag="Hierachy of the tags to make the structure"
-                     Text="{Binding DisplayFileStructure}"/>
+                     Text="{Binding DisplayFileStructure}" FontSize="14"/>
 
             <Button Content="SAVE" HorizontalAlignment="Left" Style="{StaticResource SecondaryButton}"
                     Margin="0 20 0 0" Command="{Binding SaveStructureSettingsCommand}" Width="100"/>
+
+
+            <TextBlock TextWrapping="Wrap" Margin="0 30 0 20" Opacity=".5"
+                       Foreground="{StaticResource ForegroundLightBrush}" FontSize="14">
+                Instructions are provided in the documentation to learn more about the settings that
+                you can customize.
+            </TextBlock>
 
         </StackPanel>
         
