--- a/Morgan/Pages/Home/HomePage.xaml
+++ b/Morgan/Pages/Home/HomePage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="600" d:DesignWidth="520"
       Title="HomePage">
 
-    <Grid TextBlock.FontFamily="{StaticResource NunitoLight}">
+    <Grid TextBlock.FontFamily="{StaticResource FontPrimary}">
 
         <!-- An icon indicating how many locations are added to the list -->
         <Button Content=""
