--- a/Morgan/Pages/Settings/SettingsPage.xaml
+++ b/Morgan/Pages/Settings/SettingsPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="600" d:DesignWidth="500"
       Title="SettingsPage">
 
-    <Grid TextBlock.FontFamily="{StaticResource NunitoLight}">
+    <Grid TextBlock.FontFamily="{StaticResource FontPrimary}">
 
         <StackPanel HorizontalAlignment="Center"
                     VerticalAlignment="Center">
